--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter_nearby_connections: ^1.1.1
   device_info_plus: ^2.1.0
   flutter_styled_toast: ^2.0.0
+  file_picker: ^3.0.3
+  cloud_firestore: ^2.4.0
+  firebase_core: ^1.4.0
 
 dev_dependencies:
   flutter_test:
