--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   file_picker: ^3.0.3
   cloud_firestore: ^2.4.0
   firebase_core: ^1.4.0
+  firebase_auth: ^3.0.1
+  lottie: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -51,8 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
