--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.1
   lottie: ^1.1.0
+  photo_manager: ^1.3.0
 
 dev_dependencies:
   flutter_test:
