--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_auth: ^3.0.1
   lottie: ^1.1.0
   photo_manager: ^1.3.0
+  path: ^1.8.0
+  path_provider_ex: ^1.0.1
+  flutter_file_manager: ^0.2.0
 
 dev_dependencies:
   flutter_test:
