--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   path: ^1.8.0
   path_provider_ex: ^1.0.1
   flutter_file_manager: ^0.2.0
+  provider: ^5.0.0
+  shared_preferences: ^2.0.6
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
