--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,13 @@ dependencies:
   firebase_auth: ^3.0.1
   lottie: ^1.1.0
   photo_manager: ^1.3.0
+  path_provider: ^2.0.4
   path: ^1.8.0
-  path_provider_ex: ^1.0.1
-  flutter_file_manager: ^0.2.0
   provider: ^5.0.0
   shared_preferences: ^2.0.6
   sqflite: ^2.0.0+3
   image_picker: ^0.8.4
+  firebase_storage: ^10.2.4
 
 dev_dependencies:
   flutter_test:
