--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_nearby_connections: ^1.1.1
   device_info_plus: ^2.1.0
+  qr_code_scanner: ^0.6.1
+  qr_flutter: ^4.0.0
   flutter_styled_toast: ^2.0.0
   file_picker: ^3.0.3
   cloud_firestore: ^2.4.0
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.1
   lottie: ^1.1.0
+  permission_handler: ^6.0.1
   photo_manager: ^1.3.0
   path_provider: ^2.0.4
   path: ^1.8.0
